refactored to make more testable

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,13 @@ set ( CMAKE_CXX_FLAGS "-g" )
 
 add_library( kibitz SHARED
   kibitz.cpp
+  heartbeat_sender.cpp
+  context.cpp
+  
+)
+
+target_link_libraries( kibitz
+  boost_program_options
 )
 
 add_executable( test-worker-a  test_worker_a.cpp )
