added logging zmq initialization

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,6 +11,10 @@ add_library( kibitz SHARED
 
 target_link_libraries( kibitz
   boost_program_options
+  boost_filesystem
+  boost_system
+  glog
+  zmq
 )
 
 add_executable( test-worker-a  test_worker_a.cpp )
